--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rustc_version = "0.3.2"
 duplex = "0.1.0"
 unsafe-io = { version = "0.3.0", features = ["os_pipe"] }
 terminal-io = { version = "0.1.0", optional = true }
+futures-io = { version = "0.3.12", optional = true }
 
 [badges]
 maintenance = { status = "actively-developed" }
