--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "layered-io"
-version = "0.2.2-alpha.0"
+version = "0.3.0"
 description = "I/O traits extending Read and Write"
 authors = ["Dan Gohman <dev@sunfishcode.online>"]
 edition = "2018"
