--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ duplex = "0.4.0"
 unsafe-io = { version = "0.6.0", features = ["os_pipe"] }
 terminal-io = { version = "0.4.0", optional = true }
 futures-io = { version = "0.3.12", optional = true }
+tokio = { version = "1.6.0", optional = true }
 
 [badges]
 maintenance = { status = "actively-developed" }
